# IMS

./: README.md  docker-compose.yaml  nginx.conf  script.py
app/: .gitignore  Dockerfile  main.py  pyproject.toml
app/api/: __init__.py  dependencies.py
app/api/v1/: __init__.py  devices.py  emails.py  files.py  telemetry.py  users.py
app/core/: __init__.py  config.py  db_manager.py  exceptions.py  fs_broker.py  redis_manager.py  s3_client.py  security.py  smtp_email.py
app/models/: __init__.py  base.py  device.py  file.py  telemetry.py  user.py
app/repositories/: base_repository.py  devices_repository.py  files_repository.py  telemetry_repository.py  users_repository.py
app/schemas/: confirmation.py  device.py  file.py  telemetry.py  token.py  user.py
app/services/: __init__.py  auth_service.py  cookie_service.py  devices_service.py  emails_service.py  files_service.py  telemetry_service.py  users_service.py
app/subs/: app.py  emails.py
app/templates/: confirmation.html
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: httpClient.ts
frontend/src/api/services/: DevicesService.ts  (+1 more)
frontend/src/components/: AppRouter.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useActiveSection.ts  useAuth.ts  useDevices.ts  useFileUpload.ts  useUsers.ts
frontend/src/pages/: AuthPage.tsx  DashboardPage.tsx  RecoverPage.tsx  WelcomePage.tsx
frontend/src/router/: index.ts
frontend/src/utils/: isoDate.ts  storage.ts
tests/: conftest.py  test_users.py
(+41 files in other folders)
