[tool.poetry]
package-mode=false

[tool.poetry.dependencies]
python = "^3.13.8"
asyncpg = "^0.30.0"
fastapi = "^0.119.0"
bcrypt = "^5.0.0"
pydantic = {extras = ["email"], version = "^2.12.1"}
pydantic-settings = "^2.11.0"
redis = "^6.4.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
uvicorn = "^0.37.0"
jinja2 = "^3.1.6"
faststream = {extras = ["cli", "rabbit"], version = "^0.6.0"}
aiobotocore = "^2.25.0"
pyjwt = "^2.10.1"
python-multipart = "^0.0.20"
websockets = "^15.0.1"


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"